--- a/extension/src/locales/fr.json
+++ b/extension/src/locales/fr.json
@@ -1,9 +1,25 @@
 {
-  "title": "Connexion",
-  "email": "Adresse courriel",
-  "email_hint": "Entrez votre adresse de connexion.",
+  "app_name": "TRUST",
+  "login_title": "Connexion",
+  "signup_title": "S’inscrire",
+  "signup_intro": "Voici un gestionnaire de mot de passe basé sur des personnes de confiance. D'abord, créez un compte ou connectez-vous.",
+  "email": "Courriel",
   "password": "Mot de passe",
+  "confirm_password": "Confirmation du mot de passe",
+  "email_hint": "Entrez votre adresse courriel.",
   "password_hint": "Votre mot de passe doit contenir au moins 8 caractères.",
+  "confirm_hint": "Répétez le mot de passe pour confirmation.",
   "login": "Se connecter",
-  "signup": "Pas de compte ? Inscrivez-vous !"
+  "signup": "Pas de compte ? Inscrivez-vous !",
+  "signup_button": "S’inscrire",
+  "login_redirect": "Déjà un compte ? Connectez-vous !",
+  "signup_action": "Créer un compte",
+  "back_to_login": "Déjà un compte ? Se connecter",
+  "errors": {
+    "email_required": "Veuillez entrer un courriel.",
+    "email_invalid": "Adresse courriel invalide.",
+    "password_required": "Veuillez entrer un mot de passe.",
+    "password_length": "Le mot de passe doit contenir au moins 8 caractères.",
+    "password_mismatch": "Les mots de passe ne correspondent pas."
+  }
 }
