feat: update locales impl

--- a/extension/src/locales/en.json
+++ b/extension/src/locales/en.json
@@ -1,22 +1,36 @@
 {
   "app_name": "TRUST",
   "login_title": "Login",
-  "signup_title": "Sign up",
-  "signup_intro": "A password manager based on trusted people. First, create an account or log in.",
+  "signup_title": "Sign Up",
+  "signup_intro": "This is a password manager based on trusted people. First, create an account or log in.",
   "email": "Email",
   "password": "Password",
-  "confirm_password": "Confirm password",
+  "confirm_password": "Confirm Password",
   "email_hint": "Enter your email address.",
   "password_hint": "Your password must be at least 8 characters long.",
-  "confirm_hint": "Repeat the password to confirm.",
-  "login": "Log in",
+  "confirm_hint": "Repeat the password for confirmation.",
+  "login": "Log In",
   "signup": "No account? Sign up!",
-  "signup_button": "Sign up",
+  "signup_button": "Sign Up",
+  "signup_action": "Create Account",
   "login_redirect": "Already have an account? Log in!",
-  "signup_action": "Create account",
   "back_to_login": "Already have an account? Log in",
+  "home": {
+    "passwords": "Passwords",
+    "trusted": "Trusted People",
+    "search_placeholder": "Search...",
+    "add_password": "Add Password",
+    "add_person": "Add Person",
+    "personal_accounts": "Personal Accounts",
+    "professional_accounts": "Professional Accounts",
+    "no_results": "No results"
+  },
+  "footer": {
+    "passwords": "Passwords",
+    "trusted": "Trusted"
+  },
   "errors": {
-    "email_required": "Please enter an email.",
+    "email_required": "Please enter an email address.",
     "email_invalid": "Invalid email address.",
     "password_required": "Please enter a password.",
     "password_length": "Password must be at least 8 characters long.",
