--- a/extension/src/locales/fr.json
+++ b/extension/src/locales/fr.json
@@ -12,15 +12,22 @@
   "login": "Se connecter",
   "signup": "Pas de compte ? Inscrivez-vous !",
   "signup_button": "S’inscrire",
-  "signup_action": "Créer un compte",
   "login_redirect": "Déjà un compte ? Connectez-vous !",
+  "signup_action": "Créer un compte",
   "back_to_login": "Déjà un compte ? Se connecter",
+  "errors": {
+    "email_required": "Veuillez entrer un courriel.",
+    "email_invalid": "Adresse courriel invalide.",
+    "password_required": "Veuillez entrer un mot de passe.",
+    "password_length": "Le mot de passe doit contenir au moins 8 caractères.",
+    "password_mismatch": "Les mots de passe ne correspondent pas."
+  },
   "home": {
     "passwords": "Mots de passe",
     "trusted": "Personnes de confiance",
     "search_placeholder": "Rechercher...",
     "add_password": "Ajouter un mot de passe",
-    "add_person": "Ajouter une personne",
+    "add_trusted": "Ajouter une personne de confiance",
     "personal_accounts": "Comptes personnels",
     "professional_accounts": "Comptes professionnels",
     "no_results": "Aucun résultat"
@@ -28,12 +35,5 @@
   "footer": {
     "passwords": "Mots de passe",
     "trusted": "Confiance"
-  },
-  "errors": {
-    "email_required": "Veuillez entrer un courriel.",
-    "email_invalid": "Adresse courriel invalide.",
-    "password_required": "Veuillez entrer un mot de passe.",
-    "password_length": "Le mot de passe doit contenir au moins 8 caractères.",
-    "password_mismatch": "Les mots de passe ne correspondent pas."
   }
 }
