--- a/extension/src/locales/en.json
+++ b/extension/src/locales/en.json
@@ -4,7 +4,7 @@
   "signup_title": "Sign Up",
   "signup_intro": "This is a password manager based on trusted people. First, create an account or log in.",
   "email": "Email",
-  "username": "Username", 
+  "username": "Username",
   "password": "Password",
   "confirm_password": "Confirm Password",
   "email_hint": "Enter your email address.",
@@ -23,7 +23,9 @@
     "trusted": "Trusted People",
     "search_placeholder": "Search...",
     "add_password": "Add Password",
-    "add_person": "Add Person",
+    "edit_password": "Edit Password",
+    "add_person": "Add Trusted Person",
+    "edit_person": "Edit Trusted Person",
     "personal_accounts": "Personal Accounts",
     "professional_accounts": "Professional Accounts",
     "no_results": "No results"
@@ -32,6 +34,28 @@
     "passwords": "Passwords",
     "trusted": "Trusted"
   },
+  "delete_modal": {
+    "title": "WARNING",
+    "warning_password": "You are about to delete your saved password for “{{item}}”.",
+    "warning_trusted": "You are about to delete your trusted person “{{item}}”.",
+    "confirm": "Delete",
+    "cancel": "Cancel",
+    "question": "Do you really want to delete it?"
+  },
+  "trusted": {
+    "add_title": "Add Trusted Person",
+    "add_subtitle": "Choose a trusted person who can help you reset your account if you forget your password.",
+    "edit_title": "Edit Trusted Person",
+    "edit_subtitle": "Edit the information for your trusted person."
+  },
+  "passwords": {
+    "add_title": "Add Password",
+    "add_subtitle": "Add a password for the website of your choice.",
+    "edit_title": "Edit Password",
+    "edit_subtitle": "Edit the details of your saved password."
+  },
+  "note_label": "Note (optional)",
+  "note_hint": "Add a comment or note if necessary.",
   "errors": {
     "email_required": "Please enter an email address.",
     "email_invalid": "Invalid email address.",
